--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   provider: ^6.1.1
   logger: ^2.0.2+1
   cached_network_image: ^3.3.0
+  image_picker: ^1.0.4
+  file_picker: ^8.0.0+1
+  webview_flutter: ^4.4.2
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +47,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
-    - assets/icons/
