Working with no uploads yet

--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ API_TIMEOUT_SECONDS=30
 UPLOAD_TIMEOUT_SECONDS=60
 
 # Demo Credentials
-DEMO_EMAIL=anna.virtanen@nursinghome.fi
-DEMO_PASSWORD=password123
+DEMO_EMAIL=anna.virtanen@nursinghome.com
+DEMO_PASSWORD=nursing123
