feat: transcription working end-to-end, visit list improvements, tasks display fixed

--- a/.env.production
+++ b/.env.production
@@ -12,8 +12,8 @@ API_GATEWAY_URL=http://51.20.164.143:3001/api
 # - S3 Bucket Service: http://51.20.164.143:3009/api
 
 # AWS S3 Configuration
-AWS_REGION=us-east-1
-S3_BUCKET_NAME=nursing-app-prod-bucket
+AWS_REGION=eu-north-1
+S3_BUCKET_NAME=nursing-home-audio-recordings-20251124
 
 # Audio Recording Settings
 MAX_RECORDING_DURATION_SECONDS=300
